# skill-quartermaster

./: .gitignore  .zenodo.json  BENCHMARK.md  CHANGELOG.md  CITATION.cff  LICENSE  PERFORMANCE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ab-eval.yml
benchmark/: README.md  build_corpus.py  layered_eval.py  quality_experiment.py  run_benchmark.py
benchmark/ab_eval/: AB_RESULTS.md  README.md  run_ab_eval.py
commands/: qm-archive.md  qm-author.md  qm-compile.md  qm-conflicts.md  qm-feedback.md  qm-history.md  qm-intake.md  qm-restore.md  qm-revert.md  qm-review.md  qm-runtime-setup.md  qm-runtimes.md  qm-sources.md  qm-status.md
docs/verification/: PHASE-0-runtime-abstraction.md  PHASE-1-skill-metadata-model.md  PHASE-2-historical-dictionary.md  PHASE-3-layer-aware-compiler.md  PHASE-4-guardrail-dominance.md  PHASE-5-conflict-detection.md  (+4 more)
hooks/: hooks.json  usage_hook.py
qm/: __init__.py  adapters.py  archive.py  authoring.py  cli.py  compile.py  conflicts.py  evaluation.py  feedback.py  frontmatter.py  history.py  intake.py  metadata.py  policy.py  registry.py  report.py  store.py  transitions.py
tests/: conftest.py  helpers.py  test_adapters.py  test_archive.py  test_authoring.py  test_cli.py  test_conflicts.py  test_evaluation.py  test_feedback.py  test_frontmatter.py  test_guardrails.py  test_history.py  test_intake.py  test_layered_compile.py  test_metadata.py  test_policy_compile.py  test_policy_integration.py  test_registry_transitions.py  test_skill_history.py
(+1 files in other folders)
