[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-quartermaster"
version = "0.1.0"
description = "Non-destructive skill lifecycle manager for Claude Code."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["claude", "skills", "lifecycle", "context", "curation"]
dependencies = []

[project.scripts]
qm = "qm.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["qm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
